simple index.html done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         #html{
             margin: 0;
             padding: 0;
+            scroll-behavior: auto;
         }
         #navigation{
             display: flex;
@@ -111,18 +112,24 @@
         }
         #main_parts{
             width: 50%;
-            margin-top: 10px;
-            margin-left: 10px;
-            margin-right: 10px;
-            margin-bottom: 10px;
+            margin-top: 20px;
+            margin-left: 20px;
+            margin-right: 20px;
+            margin-bottom: 20px;
             border: black;
-            border-radius: 10px;
+            border-radius: 20px;
             background-color: white;
         }
         #presentation_h{
             color: blue;
             text-align: center;
             font-size: 1cm;
+        }
+        p{
+            color: blue;
+            font-size: 0.5cm;
+            margin-left: 10px;
+            margin-right: 10px;
         }
            </style>
 
@@ -136,9 +143,9 @@
         </div>
         <div id="navigation_part">
             <ul id="contents">
-                <li>Home</li>
+                <li>Inicio</li>
                 <li>CV</li>
-                <li>Contact</li>
+                <li>Contacto</li>
             </ul>
         </div>
     </div>
@@ -153,10 +160,25 @@
     </div>
     <div id="main">
         <div id="main_parts">
-            <h2 id="presentation_h">Who I am?</h2>
+            <h2 id="presentation_h">¿Quién soy?</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet atque accusamus nihil, 
+                vero delectus dignissimos fuga debitis alias architecto dolorum adipisci quam commodi esse, eius, est incidunt rem ad exercitationem. 
+                Sed earum excepturi repellendus qui porro totam dolore vel quas dolores error suscipit, obcaecati quos. 
+                Doloribus, placeat officiis! Quos laboriosam suscipit in unde officiis incidunt aspernatur totam deserunt molestiae ducimus, 
+                delectus non amet quisquam id earum tempore vitae perferendis fuga odio cum quia, ea dicta! Inventore repellendus at animi pariatur officia? 
+                Ipsum est ipsam vero minima reprehenderit possimus nemo totam. Ad quod inventore harum a excepturi quo praesentium error?
+            </p>
         </div>
         <div id="main_parts">
-            <p>Adiós</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet atque accusamus nihil, 
+                vero delectus dignissimos fuga debitis alias architecto dolorum adipisci quam commodi esse, eius, est incidunt rem ad exercitationem. 
+                Sed earum excepturi repellendus qui porro totam dolore vel quas dolores error suscipit, obcaecati quos. 
+                Doloribus, placeat officiis! Quos laboriosam suscipit in unde officiis incidunt aspernatur totam deserunt molestiae ducimus, 
+                delectus non amet quisquam id earum tempore vitae perferendis fuga odio cum quia, ea dicta! Inventore repellendus at animi pariatur officia? 
+                Ipsum est ipsam vero minima reprehenderit possimus nemo totam. Ad quod inventore harum a excepturi quo praesentium error?
+            </p>
         </div>
     </div>
 </body>
