--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Mikel Arina Marcos</title>
@@ -16,9 +15,9 @@
         </div>
         <div id="navigation_part">
             <ul id="contents">
-                <li>Inicio</li>
-                <li>CV</li>
-                <li>Contacto</li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="contact.html">Contacto</a></li>
             </ul>
         </div>
     </div>
