--- a/cv.html
+++ b/cv.html
@@ -2,24 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Mikel Arina Marcos</title><div id="navigation">
-        <div id="navigation_part">
-            <ul id="brand">
-                <li>MAM</li>
-            </ul>
-        </div>
-        <div id="navigation_part">
-            <ul id="contents">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
-        </div>
-    </div>
+    <title>Mikel Arina Marcos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="index">
+            <li class="index_c"><a href="index.html">Inicio</a></li>
+            <li class="index_c"><a href="cv.html">CV</a></li>
+            <li class="index_c"><a href="contact.html">Contacto</a></li>
+        </nav>
+    </header>
 </body>
 </html>
