--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
     <title>Mikel Arina Marcos</title>
 </head>
 <body>
-    <div id="navigation">
-        <div id="navigation_part">
-            <ul id="brand">
-                <li>MAM</li>
-            </ul>
-        </div>
-        <div id="navigation_part">
-            <ul id="contents">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
-        </div>
-    </div>
+    <header class="header">
+        <nav class="index">
+            <li class="index_c"><a href="index.html">Inicio</a></li>
+            <li class="index_c"><a href="cv.html">CV</a></li>
+            <li class="index_c"><a href="contact.html">Contacto</a></li>
+        </nav>
+    </header>
+    
     <div id="presentation">
         <div id="name">
             <h1 id="name_h">Mikel Arina Marcos</h1>
