--- a/error.html
+++ b/error.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Mikel Arina Marcos</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="index">
-            <li class="index_c"><a href="index.html">Inicio</a></li>
-            <li class="index_c"><a href="cv.html">CV</a></li>
-            <li class="index_c"><a href="contact.html">Contacto</a></li>
-        </nav>
-    </header>
+    <h1>ERROR</h1>
+    <p>
+        La página no está disponible.
+    </p>
 </body>
 </html>
