--- a/index.html
+++ b/index.html
@@ -3,49 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Mikel Arina Marcos</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="index">
-            <li class="index_c"><a href="index.html">Inicio</a></li>
-            <li class="index_c"><a href="cv.html">CV</a></li>
-            <li class="index_c"><a href="contact.html">Contacto</a></li>
-        </nav>
-    </header>
-    
-    <div id="presentation">
-        <div id="name">
-            <h1 id="name_h">Mikel Arina Marcos</h1>
-        </div>
-        <hr>
-        <div id="work">
-            <h3 id="work_h">Cloud Deployer</h3>
-        </div>
-    </div>
-    <div id="main">
-        <div id="main_parts">
-            <h2 id="presentation_h">¿Quién soy?</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet atque accusamus nihil, 
-                vero delectus dignissimos fuga debitis alias architecto dolorum adipisci quam commodi esse, eius, est incidunt rem ad exercitationem. 
-                Sed earum excepturi repellendus qui porro totam dolore vel quas dolores error suscipit, obcaecati quos. 
-                Doloribus, placeat officiis! Quos laboriosam suscipit in unde officiis incidunt aspernatur totam deserunt molestiae ducimus, 
-                delectus non amet quisquam id earum tempore vitae perferendis fuga odio cum quia, ea dicta! Inventore repellendus at animi pariatur officia? 
-                Ipsum est ipsam vero minima reprehenderit possimus nemo totam. Ad quod inventore harum a excepturi quo praesentium error?
-            </p>
-        </div>
-        <div id="main_parts">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eveniet atque accusamus nihil, 
-                vero delectus dignissimos fuga debitis alias architecto dolorum adipisci quam commodi esse, eius, est incidunt rem ad exercitationem. 
-                Sed earum excepturi repellendus qui porro totam dolore vel quas dolores error suscipit, obcaecati quos. 
-                Doloribus, placeat officiis! Quos laboriosam suscipit in unde officiis incidunt aspernatur totam deserunt molestiae ducimus, 
-                delectus non amet quisquam id earum tempore vitae perferendis fuga odio cum quia, ea dicta! Inventore repellendus at animi pariatur officia? 
-                Ipsum est ipsam vero minima reprehenderit possimus nemo totam. Ad quod inventore harum a excepturi quo praesentium error?
-            </p>
-        </div>
-    </div>
+    <h1 style="text-align:center; color:cornflowerblue; font-size: 2cm">Mikel Arina Marcos</h1>
+    <hr>
+    <h1>¿Quién soy?</h1>
+    <p>
+        Mi nombre es Mikel Arina Marcos, nacido en Madrid pero viviendo
+        en Castelldefels (Barcelona) desde los 5 años.
+    </p>
+    <p>
+        Desde muy pequeño me he interesado por los ordenadores y la
+        tecnología. Es más, siempre me han contado mis padres, que desde
+        pequeño, cada vez que tenía un coche o algún objeto un poco
+        tecnológico, le daba la vuelta e intentaba desmontarlo para 
+        averiguar su funcionamiento.
+    </p>
+    <p>
+        Así que como puedes comprobar, este mundo me llama prácticamente 
+        desde la cuna.
+    </p>
+    <h1>¿A qué me dedico?</h1>
+    <p>
+        A nivel de estudios, actualmente estoy cursando un Grado en 
+        Ingeniería Telemática a través de la UPC. <br>
+        Además, estoy realizando dos cursos de formación a través de la 
+        UOC para ampliar mi currículum y tener más oportunidades laborales.
+    </p>
+    <p>
+        A nivel profesional, soy profesor en una academia de programación 
+        para niños y jóvenes.<br>
+        Además, también soy entrenador de fútbol.
+    </p>
+
 </body>
 </html>
